--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1754,10 +1754,17 @@ a.fg-light:hover, a.fg-light:focus {
 .page-section.counter {
   background-color: #018B8D;
   color: #fff;
+  padding: 40px;
 }
 
-.page-section.counter p{
+.page-section.counter p {
   color: #fff;
+}
+
+.page-section.counter img{
+  width: 100px;
+  height: 100px;
+  margin: 1rem;
 }
 
 .subhead {
@@ -2460,3 +2467,169 @@ a.fg-light:hover, a.fg-light:focus {
   background-color: #018B8D;
 }
 /*# sourceMappingURL=theme.css.map */
+
+.partners.owl-carousel .owl-nav button.owl-next, 
+.partners.owl-carousel .owl-nav button.owl-prev {
+  background-color: unset;
+  color: #018B8D;
+  top: 25%;
+  bottom: unset;
+}
+
+.partners.owl-carousel .owl-nav button.owl-prev {
+  left: 0;
+}
+
+.partners.owl-carousel .owl-nav button.owl-next {
+  right: 0;
+}
+
+.partners.owl-carousel .owl-nav button.owl-next span, 
+.partners.owl-carousel .owl-nav button.owl-prev span {
+  font-size: 54px;
+}
+
+/*Features-stylesheets-include-here*/
+#features {
+	text-align:center;
+	padding:2% 0%;
+}
+#features .nav-tabs {
+	display: inline-block;
+	margin-top:20px;
+}
+.tab p {
+	text-align:justify;
+}
+#features .nav-tabs > li.active > a, #features .nav-tabs > li.active > a:hover, #features .nav-tabs > li.active > a:focus {
+	box-shadow: 0 1px 4px rgba(0, 0, 0, .26);
+	border-bottom:2px solid #e73131;
+	background:#f8f8f8;
+}
+#features .nav-tabs > li > a {
+	color:#555;
+	margin-right:0;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, .26);
+	background-color: #fff;
+	border-right: 1px solid #e0e0e0;
+	border-radius:0px;
+	border-bottom:1px solid #FFFFFF;
+	width: 110px;
+	padding: 0;
+	height: 80px;
+	line-height: 80px;
+	font-size: 32px;
+}
+#features .nav-tabs > li > a i.fa {
+	font-size:25px;
+}
+#features .nav-tabs > li.active > a i.fa {
+	color:#e73131;
+}
+#features .nav-tabs > li > a:hover {
+	border-color:transparent;
+	border-right: 1px solid #e0e0e0;
+}
+#features p.feat-sec-1 {
+	padding-top:10px;
+}
+#features .tab-content .feat-sec {
+	margin-top:10px;
+}
+#features .tab-content h5 {
+	text-align:left;
+	font-weight:bolder;
+}
+#features .tab-content .line {
+	float:left;
+}
+.tab {
+	margin-top:20px;
+}
+.tab-img {
+	position:relative;
+	top:50px;
+}
+/*Portfolio-stylesheets-include-here*/
+#portfolio {
+	padding: 2% 0%;
+	background: #f5f5f5;
+	text-align:center;
+}
+#portfolio .portfolio-filter {
+	list-style: none;
+	padding: 0;
+	margin: 0 0 50px;
+	display: inline-block;
+}
+#portfolio .portfolio-filter > li {
+	float: left;
+	display: block;
+}
+#portfolio .portfolio-filter > li a {
+	display: block;
+	padding: 7px 15px;
+	background: #e5e5e5;
+	color: #64686d;
+	position: relative;
+}
+#portfolio .portfolio-filter > li a:hover, #portfolio .portfolio-filter > li a.active {
+	background: #e73131;
+	color: #fff;
+	-webkit-transition-duration: 0.5s;
+	-moz-transition-duration: 0.5s;
+	-ms-transition-duration: 0.5s;
+	-o-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+}
+.portfolio-items p {
+	color:#fff;
+	font-weight:normal;
+}
+#portfolio .portfolio-filter > li a.active:after {
+	content: " ";
+	position: absolute;
+	bottom: -17px;
+	left: 50%;
+	margin-left: -10px;
+	border-width: 10px;
+	border-style: solid;
+	border-color: #e73131 transparent transparent transparent;
+}
+#portfolio .portfolio-filter > li:first-child a {
+	border-radius: 4px 0 0 4px;
+}
+#portfolio .portfolio-filter > li:last-child a {
+	border-radius: 0 4px 4px 0;
+}
+#portfolio .portfolio-item {
+	margin-bottom:20px;
+}
+#portfolio .portfolio-item .portfolio-item-inner {
+	position: relative;
+}
+#portfolio .portfolio-item .portfolio-item-inner .portfolio-info {
+	opacity: 0;
+	position: absolute;
+	top:45%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 10px;
+	color: #fff;
+	background:rgba( 0, 0, 0, 0.7);
+}
+#portfolio .portfolio-item .portfolio-item-inner .portfolio-info h3 {
+	font-size: 16px;
+	line-height: 1;
+	margin: 0;
+	color: #fff;
+}
+#portfolio .portfolio-item:hover .portfolio-info {
+	opacity: 1;
+	transition:all 0.5s;
+}
+#portfolio .portfolio-item:hover .portfolio-info i.fa {
+	font-size:30px;
+	color:#e73131;
+}
